Thu Oct 12 12:55:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attributes are now readable.  Partially tested.  Bug fixed in
	  temporary table implementation for quartz.

Wed Oct 11 18:55:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added Attributes (ie, Keys) to quartz.  Can write them, and has
	  structure in place for reading them.  Reading not yet written,
	  tests not yet written.

Wed Oct 11 18:24:16 BST 2000 Olly Betts

	* Profiling now seems to be working.

Wed Oct 11 17:58:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmVectorSplitNode (splits a vector into several messages)

	* Gave AutoPtr an extra assignment operator to avoid extra
	  variables

	* Nodes now handle empty messages as an "end of data" better.

Wed Oct 11 17:40:36 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Wildcard types which only appear as outputs now work.

Wed Oct 11 17:37:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added method OmIndexerNode::set_empty_output(), useful as
	  a shorthand for set_output("foo",
	  OmIndexerMessage(new OmIndexerData()))

Wed Oct 11 17:35:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New method is_empty() for OmIndexerData to easily check for
	  empty messages.

Wed Oct 11 17:27:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Parameter strings can be kept inside <param></param> instead of
	  the <param value=""> attribute.  The former doesn't mangle
	  whitespace.

Wed Oct 11 11:17:52 BST 2000 Olly Betts

	* Added profiling variant of DEBUGCALL() and DEBUGCALL_STATIC(),
	  turned on with --enable-debug=profile switch to configure.
	  Reported information needs more work.

Tue Oct 10 17:03:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug in temporary implementation of quartz_table - now stores
	  records with weird characters correctly.
